# logs_parser

./: .gitignore  README.md  main.py  mypy.ini  pyproject.toml  ruff.toml
tests/: test_main.py
